--- a/app/views/marketing_dashboard/weibo_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/weibo_accounts/index.html.erb
@@ -207,7 +207,7 @@ $(function(){
       if(data['result'] == 'passed' || data['result'] == 'rejected') {
         location.reload();
       } else {
-        $(".error-flash").css("display", "block");
+        location.reload();
       }
     });
   }
