admin creation approve opt

--- a/app/views/marketing_dashboard/creations/_base_info.html.erb
+++ b/app/views/marketing_dashboard/creations/_base_info.html.erb
@@ -1,4 +1,5 @@
 <h3>创作型活动基本信息</h3>
+<input type="hidden" id='creation_id' value="<%= @creation.id %>" />
 <hr>
 <table class="table table-bordered table-striped">
   <col width="200px" />
