refs: marketing_dashboard add redis extends

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -461,6 +461,9 @@
             <li>
               <%= link_to "网红投票活动开关", vote_switch_marketing_dashboard_utilities_redis_extends_path %>
             </li>
+            <li>
+              <%= link_to "查看验证码", reg_code_marketing_dashboard_utilities_redis_extends_path %>
+            </li>
           </ul>
         </li>
         <% end %>
