price float to precision

--- a/app/views/marketing_dashboard/creations/_base_info.html.erb
+++ b/app/views/marketing_dashboard/creations/_base_info.html.erb
@@ -13,7 +13,7 @@
   </tr>
   <tr>
     <td>预算</td>
-    <td>¥<%= @creation.pre_amount %></td>
+    <td>¥<%= @creation.pre_amount.to_f %></td>
   </tr>
   <tr>
     <td>预计招募人数</td>
