--- a/app/views/marketing_dashboard/creations/show.html.erb
+++ b/app/views/marketing_dashboard/creations/show.html.erb
@@ -25,7 +25,7 @@
   </tr>
   <tr>
     <td>活动预算</td>
-    <td><%= @creation.pre_amount %>元</td>
+    <td><%= @creation.pre_amount.to_f %>元</td>
   </tr>
   <tr>
     <td>手续费%</td>
