--- a/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
+++ b/app/views/marketing_dashboard/public_wechat_accounts/index.html.erb
@@ -21,13 +21,13 @@
         </div>
         <div class="col-md-3">
           <div class="form-group">
-            <label>联系方式</label>
+            <label>Mobile Number</label>
             <%= f.search_field :kol_mobile_number_cont, class: "form-control", placeholder: "联系方式" %>
           </div>
         </div>
         <div class="col-md-3">
           <div class="form-group">
-            <label>审核状态</label>
+            <label>Status</label>
             <%= f.select :status_eq, options_for_select([['未审核',0],['审核通过',1],['审核拒绝',-1]], @q.status_eq), { include_blank: true }, class: "form-control" %>
           </div>
         </div>
@@ -49,21 +49,22 @@
       <th>ID</th>
       <th>kol ID</th>
       <th>profile_id</th>
-      <th>联系方式</th>
-      <th>公众号名称</th>
-      <th>审核状态</th>
-      <th>单图文报价</th>
-      <th>多图文头条报价</th>
-      <th>次条报价</th>
-      <th>3-n条报价</th>
-      <th>报价有效期至</th>
-      <th>圈子</th>
-      <th>粉丝数</th>
-      <th>男女偏重值</th>
-      <th>粉丝所在城市</th>
-      <th>作品</th>
-      <th>备注</th>
-      <th>操作</th>
+      <th>Mobile Number</th>
+      <th>Account Name</th>
+      <th>Status</th>
+      <th>Application Time</th>
+      <th>Price</th>
+      <th>Mult Price</th>
+      <th>Sub Price</th>
+      <th>N Price</th>
+      <th>Expired At</th>
+      <th>Circles</th>
+      <th>Followers Count</th>
+      <th>Follower's Gender</th>
+      <th>Follower's Location</th>
+      <th>Work's Links</th>
+      <th>Remark</th>
+      <th>Options</th>
     </tr>
   </thead>
 
@@ -76,6 +77,7 @@
         <td><%= t.mobile_number %></td>
         <td><%= t.nickname %></td>
         <td><%= PublicWechatAccount::STATUS[t.status] %></td>
+        <td><%= t.created_at.strftime("%F %T") %></td>
         <td><%= t.price %></td>
         <td><%= t.mult_price %></td>
         <td><%= t.sub_price %></td>
