update admin dashboard

--- a/app/views/layouts/_admin_nav.html.erb
+++ b/app/views/layouts/_admin_nav.html.erb
@@ -183,10 +183,10 @@
               <%= link_to '内容创作者管理', marketing_dashboard_creators_path %>
             </li>
             <li>
-              <%= link_to '微博用户管理', marketing_dashboard_weibo_accounts_path %>
+              <%= link_to 'BigV of weibo list', marketing_dashboard_weibo_accounts_path %>
             </li>
             <li>
-              <%= link_to '微信公众号用户管理', marketing_dashboard_public_wechat_accounts_path %>
+              <%= link_to 'BigV of wechat list', marketing_dashboard_public_wechat_accounts_path %>
             </li>
           </ul>
         </li>
