--- a/app/views/marketing_dashboard/dashboard/_admin_panel.html.erb
+++ b/app/views/marketing_dashboard/dashboard/_admin_panel.html.erb
@@ -19,7 +19,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-sm-2 control-label">Apply for bigv</label>
+        <label class="col-sm-2 control-label">Apply for bigv(<%= @r8_infos[:big_v_count] %>)</label>
         <div class="col-sm-10">
           <table class="table table-striped">
             <tbody>
