--- a/app/views/marketing_dashboard/dashboard/_admin_panel.html.erb
+++ b/app/views/marketing_dashboard/dashboard/_admin_panel.html.erb
@@ -85,19 +85,17 @@
           <table class="table table-striped">
             <tbody>
               <tr>
-                <% 3.times do %>
+                <% @r8_infos[:campaign][:top_3].each do |ele| %>
                   <td>
-                    <div class="media">
+                    <a href="/marketing_dashboard/kols/<%= ele[:id] %>" target='_blank' class="media">
                       <div class="media-left">
-                        <a href="#">
-                          <img class="media-object" src="..." alt="...">
-                        </a>
+                        <%= image_tag ele[:avatar_url] %>
                       </div>
                       <div class="media-body">
-                        <h4 class="media-heading">Media heading</h4>
-                        ...
+                        <h4 class="media-heading"><%= ele[:name] %></h4>
+                        avail click counts: <%= ele[:count] %>
                       </div>
-                    </div>
+                    </a>
                   </td>
                 <% end %>
               </tr>
@@ -116,15 +114,15 @@
       <div class="form-group">
         <label class="col-sm-2 control-label">Created Count</label>
         <div class="col-sm-2">
-          <p class="form-control-static">2</p>
+          <p class="form-control-static"><%= @r8_infos[:creation][:created_count] %></p>
         </div>
         <label class="col-sm-2 control-label">Total Budget</label>
         <div class="col-sm-2">
-          <p class="form-control-static">50000</p>
+          <p class="form-control-static"><%= @r8_infos[:creation][:total_budget] %></p>
         </div>
         <label class="col-sm-2 control-label">Total Revenue</label>
         <div class="col-sm-2">
-          <p class="form-control-static">20000</p>
+          <p class="form-control-static"><%= @r8_infos[:creation][:total_revenue] %></p>
         </div>
       </div>
       <div class="form-group">
@@ -133,19 +131,17 @@
           <table class="table table-striped">
             <tbody>
               <tr>
-                <% 3.times do %>
+                <% @r8_infos[:creation][:kols].each do |ele| %>
                   <td>
-                    <div class="media">
+                    <a href="/marketing_dashboard/kols/<%= ele[:id] %>" target='_blank' class="media">
                       <div class="media-left">
-                        <a href="#">
-                          <img class="media-object" src="..." alt="...">
-                        </a>
+                        <%= image_tag ele[:avatar_url] %>
                       </div>
                       <div class="media-body">
-                        <h4 class="media-heading">Media heading</h4>
-                        ...
+                        <h4 class="media-heading"><%= ele[:name] %></h4>
+                        total amount: <%= ele[:amount] %>
                       </div>
-                    </div>
+                    </a>
                   </td>
                 <% end %>
               </tr>
