--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -228,13 +228,13 @@
 </table>
 
 <%= will_paginate @campaign_invites, renderer: BootstrapPagination::Rails  %>
-</br>
+<!--</br>
 <%
-  csv_url = request.path + ".csv"
-  csv_url += "?" + request.query_string if request.query_string
+  # csv_url = request.path + ".csv"
+  # csv_url += "?" + request.query_string if request.query_string
 %>
 
-<%= link_to '导出列表CSV', csv_url, :class => 'btn btn-default', "data-confirm" => "关于打开csv文件中文乱码？\r\n 1. 打开Excel并新建一个空白表 \r\n 2. 顶部工具栏选择  数据 -> 自文本，选择csv文件 \r\n 3. 在弹出框中，字符集选择 UTF-8，分割符号为逗号 \r\n\r\n 确认要下载码？" %>
+<%# = link_to '导出列表CSV', csv_url, :class => 'btn btn-default', "data-confirm" => "关于打开csv文件中文乱码？\r\n 1. 打开Excel并新建一个空白表 \r\n 2. 顶部工具栏选择  数据 -> 自文本，选择csv文件 \r\n 3. 在弹出框中，字符集选择 UTF-8，分割符号为逗号 \r\n\r\n 确认要下载码？" %>-->
 
 
 <div class="modal admin-campaign-invite-modal fade" tabindex="-1" role="dialog">
